// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div>
  <table
    class="chakra-table searchTable css-0"
  >
    <tbody
      class="css-0"
      data-testid="table-scroll"
    >
      <tr
        class="project-row-0 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass "
        >
          ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass 
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2020-08-22T00:00:00.000Z-2030-08-21T00:00:00.000Z"
        >
          2020/08/22 - 2030/08/21
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="311410"
        >
          311,410
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="37202"
        >
          37,202
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="30167"
        >
          30,167
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="7035"
        >
          7,035
        </td>
      </tr>
      <tr
        class="project-row-1 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AR-ACM0003: Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003: Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2010-05-02T00:00:00.000Z-undefined"
        >
          2010/05/02
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="128161"
        >
          128,161
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="225734"
        >
          225,734
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="147403"
        >
          147,403
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="78331"
        >
          78,331
        </td>
      </tr>
      <tr
        class="project-row-2 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Approved"
        >
          Approved
        </td>
        <td
          class="css-rl3ocm"
          title="undefined-2044-05-05T00:00:00.000Z"
        >
          2044/05/05
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="35613"
        >
          35,613
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
      </tr>
      <tr
        class="project-row-3 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2017-11-01T00:00:00.000Z-2027-10-31T00:00:00.000Z"
        >
          2017/11/01 - 2027/10/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="357571"
        >
          357,571
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="172795"
        >
          172,795
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="172795"
        >
          172,795
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly 2`] = `
<div>
  <table
    class="chakra-table searchTable css-0"
  >
    <tbody
      class="css-0"
      data-testid="table-scroll"
    >
      <tr
        class="project-row-0 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass "
        >
          ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass 
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2020-08-22T00:00:00.000Z-2030-08-21T00:00:00.000Z"
        >
          2020/08/22 - 2030/08/21
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="311410"
        >
          311,410
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="37202"
        >
          37,202
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="30167"
        >
          30,167
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="7035"
        >
          7,035
        </td>
      </tr>
      <tr
        class="project-row-1 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AR-ACM0003: Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003: Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2010-05-02T00:00:00.000Z-undefined"
        >
          2010/05/02
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="128161"
        >
          128,161
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="225734"
        >
          225,734
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="147403"
        >
          147,403
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="78331"
        >
          78,331
        </td>
      </tr>
      <tr
        class="project-row-2 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Approved"
        >
          Approved
        </td>
        <td
          class="css-rl3ocm"
          title="undefined-2044-05-05T00:00:00.000Z"
        >
          2044/05/05
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="35613"
        >
          35,613
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
      </tr>
      <tr
        class="project-row-3 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2017-11-01T00:00:00.000Z-2027-10-31T00:00:00.000Z"
        >
          2017/11/01 - 2027/10/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="357571"
        >
          357,571
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="172795"
        >
          172,795
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="172795"
        >
          172,795
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders correctly with hover 1`] = `
<div>
  <table
    class="chakra-table searchTable css-0"
  >
    <tbody
      class="css-0"
      data-testid="table-scroll"
    >
      <tr
        class="project-row-0 css-mii0oe hoverGreen"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass "
        >
          ACM0002: Grid-connected electricity generation from renewable sources / ACM0006: Electricity and heat generation from biomass 
        </td>
        <td
          class="css-0"
          title="Electricity; gas, steam and air conditioning supply"
        >
          Electricity; gas, steam and air conditioning supply
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2020-08-22T00:00:00.000Z-2030-08-21T00:00:00.000Z"
        >
          2020/08/22 - 2030/08/21
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="311410"
        >
          311,410
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="37202"
        >
          37,202
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="30167"
        >
          30,167
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="7035"
        >
          7,035
        </td>
      </tr>
      <tr
        class="project-row-1 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="AR-ACM0003: Afforestation and reforestation of lands except wetlands"
        >
          AR-ACM0003: Afforestation and reforestation of lands except wetlands
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2010-05-02T00:00:00.000Z-undefined"
        >
          2010/05/02
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="128161"
        >
          128,161
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="225734"
        >
          225,734
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="147403"
        >
          147,403
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="78331"
        >
          78,331
        </td>
      </tr>
      <tr
        class="project-row-2 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Approved"
        >
          Approved
        </td>
        <td
          class="css-rl3ocm"
          title="undefined-2044-05-05T00:00:00.000Z"
        >
          2044/05/05
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="35613"
        >
          35,613
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
      </tr>
      <tr
        class="project-row-3 css-mii0oe"
        data-testid="table-row"
      >
        <td
          class="css-0"
          title="EcoRegistry"
        >
          EcoRegistry
        </td>
        <td
          class="css-0"
          title="M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels"
        >
          M/LU-REDD+: Methodology for the Implementation of REDD+ Projects Consistent with National Reference Levels
        </td>
        <td
          class="css-0"
          title="Agriculture; forestry and fishing"
        >
          Agriculture; forestry and fishing
        </td>
        <td
          class="css-0"
          title="Colombia"
        >
          Colombia
        </td>
        <td
          class="css-0"
          title="Authorized"
        >
          Authorized
        </td>
        <td
          class="css-rl3ocm"
          title="2017-11-01T00:00:00.000Z-2027-10-31T00:00:00.000Z"
        >
          2017/11/01 - 2027/10/31
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="357571"
        >
          357,571
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="172795"
        >
          172,795
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="0"
        >
          0
        </td>
        <td
          class="css-0"
          data-is-numeric="true"
          title="172795"
        >
          172,795
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
